MCPODS-6434 CR fix